Plugin Directory: Responsive Tabs: Prevent the menu vertical size jumping around while hovering menu items.
See #2776.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9681 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/components/plugin/style.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/components/plugin/style.scss
@@ -143,6 +143,12 @@
 		border-bottom: 0;
 		padding-bottom: 2px;
 		background: #fff;
+
+		@media screen and (max-width:34em) {
+			&.active, &:hover {
+				padding-bottom: 2px !important;
+			}
+		}
 	}
 
 	span#reviews:not(:target) ~ span#installation:not(:target) ~ span#developers:not(:target) ~ .entry-content #tab-description,
